# architect-2-xj6f1a

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cd-dev.yml  cd-prod.yml  cd-staging.yml  ci.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/: README.md
docs/api/: auth.md  interactions.md  sites.md
docs/architecture/: backend.md  database.md  frontend.md  monitoring.md  overview.md  security.md
docs/guides/: deployment.md  development_setup.md  monitoring.md  troubleshooting.md
docs/project/: requirements.md  roadmap.md
infrastructure/: README.md
infrastructure/backup/: backup_plans.tf  backup_vaults.tf
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
infrastructure/network/: nacls.tf  security_groups.tf  vpc.tf
infrastructure/scripts/: backup-restore.sh  monitoring-setup.sh  (+2 more)
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  extensions.py  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
src/backend/api/: __init__.py  error_handlers.py  routes.py
src/backend/auth/: __init__.py  controllers.py  middlewares.py  models.py  routes.py  services.py  utils.py
src/backend/database/: __init__.py  models.py
src/backend/database/migrations/: __init__.py  env.py
src/backend/database/seeders/: __init__.py  seed_data.py  seed_interactions.py  seed_sites.py  seed_users.py
src/backend/interactions/: __init__.py  controllers.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/backend/scripts/: __init__.py  apply_migrations.py  create_db.py  generate_migration.py  lint.sh  reset_db.py  run_dev.sh  setup_dev.sh  test.sh
src/backend/sites/: __init__.py  controllers.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/backend/tests/: __init__.py  conftest.py  factories.py
src/backend/tests/integration/: __init__.py  test_auth_api.py  test_interactions_api.py  test_site_scoping.py  test_sites_api.py
src/backend/tests/unit/: __init__.py  test_auth.py  test_interactions.py  test_sites.py
src/backend/utils/: __init__.py  date_utils.py  logging.py  pagination.py  security.py  validators.py
(+176 files in other folders)
